<resources>
    <string name="app_name">Rider</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="passageiro">Passageiro</string>
    <string name="motorista">Motorista</string>
    <string name="entrar">Entrar</string>
    <string name="title_activity_passageiro">Iniciar Uma Viagem</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sair">Sair</string>
    <string name="meu_local">Meu Local</string>
    <string name="digite_seu_destino">Digite seu Destino</string>
    <string name="aguardando_requisi_es">Aguardando Requisições...</string>
</resources>